# dogging

./: .gitignore  .readthedocs.yml  LICENSE  README.rst  dogging.py  setup.cfg  setup.py
docs/: Makefile  make.bat  requirements.readthedocs.txt  requirements.txt
docs/source/: conf.py  index.rst
dogging/: __init__.py  bone.py  chew_toys.py  dog.py  teeth.py
tests/: __init__.py  base.py  configure_logging.py  test_dog.py
