[metadata]
name = dogging
description = A highly flexible and featureful logging function decorator.
long_description = file: README.rst
url = https://github.com/reuvenpo/dogging

author = Reuven Podmazo
author_email = reuven.podmazo@gmail.com
license = MIT
license_file = LICENSE

keywords = logging, decorator, introspection
classifiers =
    Intended Audience :: Developers

    License :: OSI Approved :: MIT License

    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Libraries :: Python Modules


[options]
packages = dogging
python_requires = ~=2.7
setup_requires =
    setuptools_scm~=1.0
    setuptools_scm_git_archive~=1.0
install_requires =
    setuptools


[options.package_data]
dogging = VERSION


[aliases]
docs = develop build_sphinx --all develop --uninstall


[bdist_wheel]
python-tag = cp27
